--- a/sampleMavenProject/pom.xml
+++ b/sampleMavenProject/pom.xml
@@ -1,4 +1,4 @@
-<!--New Comment from local repo-->
+<!--New Comment from release1.0-->
 <!--Comment 1 from feature2_dani -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
